# prime-owl

./: .gitmodules  CMakeLists.txt  README.md
primer/: CMakeLists.txt
primer/embree-prime/: CMakeLists.txt  Context.cpp  Context.h  Geom.h  Group.cpp  Group.h  Model.cpp  Model.h  Spheres.h  Triangles.cpp  Triangles.h
primer/include/primer/: primer.h
primer/owl-prime/: CMakeLists.txt  Context.cu  Context.h  Model.cpp  Model.h  Spheres.cpp  Spheres.h  Triangles.cpp  Triangles.h  deviceCode.cu  deviceCode.h
primer/primer-common/: Context.h  Geom.h  Model.h  Ray.h  primer.cpp
pyPrimer/: CMakeLists.txt  Context.cpp  Context.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  bindings.cpp  common.h  exampleAO.ipynb  exampleAO.py  exampleAO_convert2vtk.py  fromArrays.py  fromArrays_generateReference.cpp  simplestPossibleExample.py
pyPrimer/example_data/: boxes_trimesh.indices  boxes_trimesh.vertices
samples/: CMakeLists.txt
samples/instances/: CMakeLists.txt  instances.cu
samples/rtow-prime-cuda/: CMakeLists.txt  Camera.h  Materials.h  World.cpp  World.h  rtow-render-cuda.cu
samples/rtow-prime-host/: CMakeLists.txt  rtow-render-host.cpp
samples/spheres/: CMakeLists.txt  spheres.cu
